on-demand connman-vpnd start
Change-Id: I88da48264b9506b58335c4dbefa7dccb08215245
Signed-off-by: Deepak Kumar Sahu <deepak.sahu@samsung.com>

--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -7,7 +7,7 @@ DefaultDependencies=no
 Type=dbus
 BusName=net.connman
 Restart=on-failure
-ExecStart=@sbindir@/connmand -n
+ExecStart=@sbindir@/connmand -n --noplugin vpn
 StandardOutput=null
 
 [Install]
