Imported Upstream version 1.29
Change-Id: I2958446c35966d9ed72df0120b80561be7d89f54
Signed-off-by: Taesub Kim <taesub.kim@samsung.com>

--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -2,13 +2,14 @@
 Description=Connection service
 Requires=dbus.socket
 After=dbus.socket
-Before=remote-fs.target
+Before=remote-fs-pre.target
+Wants=remote-fs-pre.target
 
 [Service]
 Type=dbus
 BusName=net.connman
 Restart=on-failure
-ExecStart=@prefix@/sbin/connmand -n
+ExecStart=@sbindir@/connmand -n
 StandardOutput=null
 
 [Install]
