Remove capability and Change from dbus to systemd for vpn service
Change-Id: I7ef5583cfc148b4835abec4bf57ad76369ed9b8e
Signed-off-by: hyunuktak <hyunuk.tak@samsung.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -63,16 +63,15 @@ endif
 
 if SYSTEMD
 systemdunitdir = @SYSTEMD_UNITDIR@
-
-systemdunit_DATA = src/connman.service
+systemdunit_DATA = src/connman.service vpn/connman-vpn.service
 
 endif
 endif
 
 service_files_sources = src/connman.service.in src/net.connman.service.in \
-				vpn/net.connman.vpn.service.in
+				vpn/net.connman.vpn.service.in vpn/connman-vpn.service.in
 service_files = src/connman.service src/net.connman.service \
-				vpn/net.connman.vpn.service
+				vpn/net.connman.vpn.service vpn/connman-vpn.service
 
 plugin_LTLIBRARIES =
 
