[SPIN] gsupplicant: fix stucking in scanning state when scan failed.
- gsupplicant: fix stucking in scanning state when scan failed.
- Apply ASLR option.
- Add ""TIZEN_WEARABLE"" check in service file.
- change the dhcp client device name.
- default internet service: fix not cleared if pdp activation failed.
- Change Russia cert build feature.
- Update the Connman.service.in file.
- Remove connection retry when association fail.

Change-Id: I3ac8e49d0a3c229b298296f8e7cbf34845c2c90d
Signed-off-by: Niraj Kumar Goit <niraj.g@samsung.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -115,7 +115,7 @@ src_connmand_LDADD = gdbus/libgdbus-internal.la $(builtin_libadd) \
 			@TPKP_GNUTLS_LIBS@ \
 			-lresolv -ldl -lrt
 
-src_connmand_LDFLAGS = -Wl,--export-dynamic \
+src_connmand_LDFLAGS = -Wl,--export-dynamic -pie \
 				-Wl,--version-script=$(srcdir)/src/connman.ver
 
 if VPN
@@ -209,7 +209,8 @@ AM_CFLAGS = @DBUS_CFLAGS@ @GLIB_CFLAGS@ @XTABLES_CFLAGS@ \
 				-DSCRIPTDIR=\""$(build_scriptdir)"\" \
 				-DSTORAGEDIR=\""$(storagedir)\"" \
 				-DVPN_STORAGEDIR=\""$(vpn_storagedir)\"" \
-				-DCONFIGDIR=\""$(configdir)\""
+				-DCONFIGDIR=\""$(configdir)\"" \
+				-fPIE
 
 if VPN
 AM_CPPFLAGS = @TPKP_GNUTLS_CFLAGS@ -I$(builddir)/include -I$(srcdir)/gdbus
