--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -1,15 +1,14 @@
 [Unit]
 Description=Connection service
-After=net-config.service
-DefaultDependencies=no
+Requires=dbus.socket
+After=dbus.socket
 
 [Service]
 Type=dbus
 BusName=net.connman
+ExecStartPre=/usr/bin/dbus-send --system --dest=net.netconfig / net.netconfig.auto.activate
 Restart=on-failure
-ExecStart=@sbindir@/connmand -n --noplugin vpn
-StandardOutput=null
-CapabilityBoundingSet=~CAP_MAC_ADMIN
+ExecStart=/usr/sbin/connmand -n
 
 [Install]
 WantedBy=multi-user.target
