Set SmackProcessLabel to System
Change-Id: I233c41596ec8fb4424e18c80e043658f3d510d47
Signed-off-by: Yunjin Lee <yunjin-.lee@samsung.com>

--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -7,6 +7,7 @@ DefaultDependencies=no
 Type=dbus
 BusName=net.connman
 Restart=on-failure
+SmackProcessLabel=System
 ExecStart=@sbindir@/connmand -n --noplugin vpn
 StandardOutput=null
 CapabilityBoundingSet=~CAP_MAC_ADMIN
