Change attribute for connmand and set uid/gid into service
Change-Id: I7c89d697792aff2521a31d1772e696c19313fc44
Signed-off-by: hyunuktak <hyunuk.tak@samsung.com>

--- a/vpn/connman-vpn.service.in
+++ b/vpn/connman-vpn.service.in
@@ -8,9 +8,9 @@ Type=dbus
 BusName=net.connman.vpn
 SmackProcessLabel=System
 ExecStart=@sbindir@/connman-vpnd -n
+User=network_fw
+Group=network_fw
 StandardOutput=null
-CapabilityBoundingSet=~CAP_MAC_ADMIN
-CapabilityBoundingSet=~CAP_MAC_OVERRIDE
 
 [Install]
 WantedBy=multi-user.target
