--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -9,9 +9,9 @@ BusName=net.connman
 Restart=on-failure
 SmackProcessLabel=System
 ExecStart=@sbindir@/connmand -n --noplugin vpn
-User=network_fw
-Group=network_fw
 StandardOutput=null
+CapabilityBoundingSet=~CAP_MAC_ADMIN
+CapabilityBoundingSet=~CAP_MAC_OVERRIDE
 
 [Install]
 WantedBy=multi-user.target
