Add code to parse section struct into vici request
Change-Id: If19978b75ab53c43a641a5e51bb0ef6a2adaa545
Signed-off-by: Yu jiung <jiung.yu@samsung.com>

--- a/Makefile.plugins
+++ b/Makefile.plugins
@@ -119,7 +119,7 @@ else
 vpn_plugin_LTLIBRARIES += vpn/plugins/ipsec.la
 vpn_plugin_objects += $(plugins_ipsec_la_OBJECTS)
 vpn_plugins_ipsec_la_SOURCES = vpn/plugins/vpn.h vpn/plugins/vpn.c \
-						vpn/plugins/ipsec.c
+						vpn/plugins/ipsec.c vpn/plugins/vici-client.c
 vpn_plugins_ipsec_la_CFLAGS = $(plugin_cflags) -DIPSEC=\"@IPSEC@\" \
 					-DVPN_STATEDIR=\""$(vpn_statedir)"\" \
 					-DSCRIPTDIR=\""$(build_scriptdir)"\"
