--- a/src/connman.conf
+++ b/src/connman.conf
@@ -4,6 +4,12 @@
 	<policy user="root">
 		<allow own="net.connman"/>
 		<allow send_destination="net.connman"/>
+		<allow send_type="signal"/>
+	</policy>
+	<policy user="network_fw">
+		<allow own="net.connman"/>
+		<allow send_destination="net.connman"/>
+		<allow send_type="signal"/>
 	</policy>
 	<policy context="default">
 		<check send_destination="net.connman" send_interface="net.connman.Manager" send_member="GetTechnologies" privilege="http://tizen.org/privilege/network.get" />
