Added cap_dac_override capability
Change-Id: I0c668091b85bf1f4f31ea2d1a9c6d53d73cd5736
Signed-off-by: Taesub Kim <taesub.kim@samsung.com>

--- a/src/connman_tv.service.in
+++ b/src/connman_tv.service.in
@@ -12,7 +12,7 @@ Restart=on-failure
 SmackProcessLabel=System
 ExecStart=@bindir@/connmand -n --noplugin vpn
 StandardOutput=null
-Capabilities=cap_net_admin,cap_net_bind_service,cap_net_broadcast,cap_net_raw=i
+Capabilities=cap_setgid,cap_net_admin,cap_net_bind_service,cap_net_broadcast,cap_net_raw,cap_dac_override=i
 SecureBits=keep-caps
 
 [Install]
