Added dbus/cynara policy
Change-Id: I82192eb00243dd45e64e37e806d7c7e90fa3fac2
Signed-off-by: Taesub Kim <taesub.kim@samsung.com>

--- a/vpn/vpn-dbus.conf
+++ b/vpn/vpn-dbus.conf
@@ -1,20 +1,22 @@
 <!DOCTYPE busconfig PUBLIC "-//freedesktop//DTD D-BUS Bus Configuration 1.0//EN"
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
-    <policy user="root">
-        <allow own="net.connman.vpn"/>
-        <allow send_destination="net.connman.vpn"/>
+	<policy user="root">
+		<allow own="net.connman.vpn"/>
+		<allow send_destination="net.connman.vpn"/>
 		<allow send_interface="net.connman.vpn.Agent"/>
-    </policy>
-    <policy user="network_fw">
-        <allow own="net.connman.vpn"/>
-        <allow send_destination="net.connman.vpn"/>
+	</policy>
+	<policy user="network_fw">
+		<allow own="net.connman.vpn"/>
+		<allow send_destination="net.connman.vpn"/>
 		<allow send_interface="net.connman.vpn.Agent"/>
-    </policy>
-    <policy at_console="true">
-        <allow send_destination="net.connman.vpn"/>
-    </policy>
-    <policy context="default">
-        <deny send_destination="net.connman.vpn"/>
-    </policy>
+	</policy>
+	<policy at_console="true">
+		<allow send_destination="net.connman.vpn"/>
+	</policy>
+	<policy context="default">
+		<deny own="net.connman.vpn"/>
+		<deny send_destination="net.connman.vpn"/>
+		<deny send_interface="net.connman.vpn.Agent"/>
+	</policy>
 </busconfig>
