Added dbus method to get whether 5Ghz band is supported
Change-Id: Ib3b189615648a35aa876eab3e3f61c47ac0c1e68
Signed-off-by: Abhishek Sansanwal <abhishek.s94@samsung.com>

--- a/src/connman.conf
+++ b/src/connman.conf
@@ -14,6 +14,7 @@
 		<deny send_destination="net.connman"/>
 		<allow send_destination="net.connman" send_type="signal"/>
 		<allow send_destination="net.connman" send_interface="net.connman.Technology" send_member="GetScanState" />
+		<allow send_destination="net.connman" send_interface="net.connman.Technology" send_member="Get5GhzSupported" />
 
 		<check send_destination="net.connman" send_interface="net.connman.Manager" send_member="GetTechnologies" privilege="http://tizen.org/privilege/network.get" />
 		<check send_destination="net.connman" send_interface="net.connman.Manager" send_member="GetProperties" privilege="http://tizen.org/privilege/network.get" />
