Added support to get maximum scan SSIDs.
Added support to get Max number of SSIDs scan supported by wlan chipset.

Change-Id: If4cbc07f6937718fab123600a962179b3adbc081
Signed-off-by: Niraj Kumar Goit <niraj.g@samsung.com>

--- a/src/connman.conf
+++ b/src/connman.conf
@@ -15,6 +15,7 @@
 		<allow send_destination="net.connman" send_type="signal"/>
 		<allow send_destination="net.connman" send_interface="net.connman.Technology" send_member="GetScanState" />
 		<allow send_destination="net.connman" send_interface="net.connman.Technology" send_member="Get5GhzSupported" />
+		<allow send_destination="net.connman" send_interface="net.connman.Technology" send_member="GetMaxScanSsid" />
 
 		<check send_destination="net.connman" send_interface="net.connman.Manager" send_member="GetTechnologies" privilege="http://tizen.org/privilege/network.get" />
 		<check send_destination="net.connman" send_interface="net.connman.Manager" send_member="GetProperties" privilege="http://tizen.org/privilege/network.get" />
