Disable backtrace option
Change-Id: Ie53230568c290b1449e145e9c77f36cfc1af8a03
Signed-off-by: Jaehyun Kim <jeik01.kim@samsung.com>

--- a/src/connman.service.in
+++ b/src/connman.service.in
@@ -10,7 +10,7 @@ Group=network_fw
 BusName=net.connman
 Restart=on-failure
 SmackProcessLabel=System
-ExecStart=@bindir@/connmand -n --noplugin vpn
+ExecStart=@bindir@/connmand -n --nobacktrace --noplugin vpn
 StandardOutput=null
 Capabilities=cap_setgid,cap_net_admin,cap_net_bind_service,cap_net_broadcast,cap_net_raw,cap_dac_override=i
 SecureBits=keep-caps
