Add an option for gateway timeserver handling
Change-Id: I19f09647b7471f146adb95bc7e81fd9ab11f18ac
Signed-off-by: Jaehyun Kim <jeik01.kim@samsung.com>

--- a/src/main.conf
+++ b/src/main.conf
@@ -124,3 +124,7 @@ SingleConnectedTechnology = true
 # AlwaysConnectedTechnologies =
 
 NetworkCellularInterfaceList = pdp,rmnet,seth_td,seth_w
+
+# Allow connman to add service gateway to the time server list.
+# Default value is false.
+# UseGatewayTimeserver = false
