--- a/src/main_disable_eth.conf
+++ b/src/main_disable_eth.conf
@@ -108,3 +108,7 @@ SingleConnectedTechnology = true
 # Enable6to4 = false
 
 NetworkCellularInterfaceList = pdp,rmnet,seth_td,seth_w
+
+# Allow connman to add service gateway to the time server list.
+# Default value is false.
+# UseGatewayTimeserver = false
