--- a/src/main_tv.conf
+++ b/src/main_tv.conf
@@ -109,7 +109,9 @@ SingleConnectedTechnology = true
 
 NetworkCellularInterfaceList = pdp,rmnet,seth_td,seth_w
 
-
+# Allow connman to add service gateway to the time server list.
+# Default value is false.
+# UseGatewayTimeserver = false
 
 # Enable Tizen TV Profile Features
 TizenTVExtension = true
