Added support to enable/disable Auto-IP option.
Added support to enable/disable Auto-IP option using main.conf

Change-Id: Iea1cae5a28681a90a5f79735c7374791a227feb7
Signed-off-by: Niraj Kumar Goit <niraj.g@samsung.com>

--- a/src/main.conf
+++ b/src/main.conf
@@ -154,3 +154,12 @@ SingleConnectedTechnology = true
 # AddressConflictDetection = false
 
 NetworkCellularInterfaceList = pdp,rmnet,seth_td,seth_w
+
+# Enable use of link-local address for auto-configuration.
+# When a device fails to get IP address from DHCP server,
+# ConnMan will start link-local address autoconfiguration and
+# assign a link-local IP address to device.
+# If this setting is false and device fails to get IP address
+# from DHCP server then device state will be set to disconnected.
+# Default value is true.
+# EnableAutoIp = false
