Added an option in main.conf to set global DNS.
Change-Id: I52f95964f82a88389e98592c64bf4820c1da5887
Signed-off-by: Niraj Kumar Goit <niraj.g@samsung.com>

--- a/src/main.conf
+++ b/src/main.conf
@@ -163,3 +163,8 @@ NetworkCellularInterfaceList = pdp,rmnet,seth_td,seth_w
 # from DHCP server then device state will be set to disconnected.
 # Default value is true.
 # EnableAutoIp = false
+
+# Allow connman to set additional global nameserver and it will be used
+# if all nameservers are failed to resolve DNS query. The nameserver
+# entries must be in numeric format.
+# GlobalNameserver = 8.8.8.8
